# PropX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
doc/: Doxyfile  README.md  class_diagram.puml
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/connector/: CMakeLists.txt  database-connector.cpp  database-connector.h
src/cryptography/: CMakeLists.txt  cryptography.cpp  cryptography.h
src/person/: CMakeLists.txt  person.cpp  person.h
src/property/: CMakeLists.txt  property.cpp  property.h
src/purchase/: CMakeLists.txt  purchase.cpp  purchase.h
src/ui/: CMakeLists.txt  create-property.ui  create-purchase.ui  create-user.ui  create_property.cpp  create_property.h  create_purchase.cpp  create_purchase.h  create_user.cpp  create_user.h  home-window.ui  home_window.cpp  home_window.h  login-window.ui  login_window.cpp  login_window.h
src/user/: CMakeLists.txt  user.cpp  user.h
test/: CMakeLists.txt  cryptography_test.cc  person_test.cc  property_test.cc  purchase_test.cc  user_test.cc
